testsuite/tests/th/TH_runIO.stderr

TH_runIO.hs:12:7: error: [GHC-87897]
    • Exception when trying to run compile-time code:
        user error (hi)
      Code: (runIO (fail "hi"))
    • In the untyped splice: $(runIO (fail "hi"))
